# MovemberStepTracker

./: .env  .gitignore  3_Home.py  Home.py  Login.py  pyproject.toml  requirements.txt
pages/: 2_Home.py  2_Login.py  3_Leaderboard.py  4_Admin.py  4_Leadership Board.py  5_Admin.py  Admin.py  Leaderboard.py
src/components/: __init__.py
src/data/: loader.py
src/utils/: __init__.py
streamlit-app/: .gitignore  Home.py  README.md  app.py  db.py  requirements.txt
streamlit-app/.streamlit/: config.toml
streamlit-app/pages/: About.py  Admin.py  Home.py  Leaderboard.py  Login.py  Protected.py  Scavenger Hunt.py  Signup.py
streamlit-app/src/components/: visualization.py
streamlit-app/src/data/: __init__.py
streamlit-app/tests/: test_app.py
