[tool]
name = "streamlit-app"
version = "0.1.0"
description = "A Streamlit application for tracking steps during Movember."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn"
]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.8"